crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_empty_tool_argument_buffer.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: body
---
{
  "messages": [
    {
      "content": null,
      "role": "assistant",
      "tool_calls": [
        {
          "function": {
            "arguments": "{}",
            "name": "ping"
          },
          "id": "call_1",
          "type": "function"
        }
      ]
    }
  ],
  "model": "command-a-03-2026",
  "stream": true
}
