crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_image_content_block.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: err.to_string()
---
cohere-v2 codec does not encode Image blocks
