crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_named_tool_choice_unsupported.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: err.to_string()
---
cohere-v2 codec cannot force one specific named tool via tool_choice (only REQUIRED/NONE are supported on this wire format)
