crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_raw_extra_passthrough_denied.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: body
---
{
  "messages": [
    {
      "content": "Hello.",
      "role": "user"
    }
  ],
  "model": "command-a-03-2026",
  "stream": true
}
