crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_reasoning_off.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: body
---
{
  "model": "command-a-reasoning-03-2026",
  "messages": [
    {
      "role": "user",
      "content": "Hello."
    }
  ],
  "stream": true
}
