crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_reasoning_on.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: body
---
{
  "messages": [
    {
      "content": "Prove sqrt(2) is irrational.",
      "role": "user"
    }
  ],
  "model": "command-a-reasoning-03-2026",
  "stream": true,
  "thinking": {
    "type": "enabled"
  }
}
