crates/roundhouse-provider/tests/snapshots/golden_cohere_v2__cohere_v2_single_turn_text.snap
---
source: crates/roundhouse-provider/tests/golden_cohere_v2.rs
expression: enc(&req)
---
{
  "model": "command-a-03-2026",
  "messages": [
    {
      "role": "user",
      "content": "What is 2+2?"
    }
  ],
  "stream": true
}
